...
    mutationFn: callout => apiCreateCallout(callout),
  });
  const calloutUpdateMutation = useMutation({
    mutationFn: ({ idInt, callout }) => apiUpdateCallout(idInt, callout),
  });

  let headerTitle: string = 'Create Callout';

  const callOutTypeSelect = [
    { label: 'Search', enum: calloutType.SEARCH, value: '0' },
    { label: 'Rescue', enum: calloutType.RESCUE, value: '1' },
    { label: 'Information Only', enum: calloutType.INFORMATION, value: '2' },
  ];

  if (id && typeof id === 'string') {
    headerTitle = 'Update Callout';
  }
...
              placeholder="Title"
              value={title}
            />
            <DropdownSelector
              title="Callout Type"
              options={callOutTypeSelect}
              placeholder="Select type"
              selectedValue={`${callOutTypeSelect.findIndex(item => item.enum === operationType)}`}
              onSelect={calloutTypeSelected}
            />
            <FormTextInput
              title="Location"
              rightButton={require('@assets/icons/map.png')}
...
              onChange={locationChanged}
              placeholder="Location"
              value={locationText}
            />
            <FormTextInput
              onChange={locationDescChanged}
              placeholder="Location Description"
              value={locationDescText}
            />
            <FormTextInput
              title="Subject"
              onChange={subjectChanged}
              placeholder="Subject"
              value={subject}
            />
            <FormTextInput
              icon={require('@assets/icons/phone.png')}
              onChange={subjectContactChanged}
              placeholder="Subject Contact"
              value={subjectContact}
            />
            <FormTextInput
              title="Informant"
              onChange={informantChanged}
              placeholder="Informant"
              value={informant}
            />
            <FormTextInput
              icon={require('@assets/icons/phone.png')}
              onChange={informantContactChanged}
              placeholder="Informant Contact"
              value={informantContact}
            />
            <FormTextArea
              title="Circumstances"
              height={100}
              onChange={circumstancesChanged}
              placeholder="Circumstances"
              value={circumstances}
            />
            <DropdownSelector
              title="Tactical Talkgroup"
              options={primaryRadioChannelsAvailable}
              placeholder="Select Frequency"
              selectedValue={radioFrequency}
              onSelect={radioFreqSelected}
            />
            <DropdownMultiselect
              title="Other Radio Channels"
              options={additionalRadioChannelsAvailable}
              placeholder="Select Frequencies"
              selectedValues={additionalRadioFrequencies}
              onSelect={additionalRadioFrequenciesSelected}
            />
            <DropdownMultiselect
              title="Notifications Made"
              options={notificationsAvailable}
              placeholder="Select Notifications"
              selectedValues={notificationsMade}
              onSelect={notificationsSelected}
            />
            <FormTextInput
              title="Handling Unit / Tag #"
              onChange={handlingUnitChanged}
...
