import type { geocodeAddressResponse } from '@remote/responses';
import type { LatLng, LongPressEvent, MapMarker, Region } from 'react-native-maps';
import type { location } from '@/types/location';
import Header from '@components/Header';
import ActivityModal from '@components/modals/ActivityModal';
import LocationSelectionModal from '@components/modals/LocationSelectModal';
import { geocodeAddress } from '@remote/google-maps';
import colors from '@styles/colors';
import { elements } from '@styles/elements';
import { useStore } from '@tanstack/react-form';
import { coordinateFromString } from '@utility/locationHeler';
import { router } from 'expo-router';
import { useEffect, useRef, useState } from 'react';
import { Alert, Image, Keyboard, StyleSheet, Text, TouchableOpacity, View } from 'react-native';
import MapView, { Marker } from 'react-native-maps';
import { SafeAreaView } from 'react-native-safe-area-context';
import KeyboardAvoidingCustomView from '@/components/KeyboardAvoidingCustomView';
import { useAppForm } from '@/hooks/form';
import useStatusBarColor from '@/hooks/useStatusBarColor';
import { useEditingLocation } from '@/storage/mmkv';
import { locationToShortString, locationToString } from '@/types/location';
import { handleBackPressed, useBackHandler } from '@/utility/backHandler';

function Page() {
  const markerRef = useRef<MapMarker>(null);
  const [showSpinner, setShowSpinner] = useState(false);
  const [showSearchResults, setShowSearchResults] = useState(false);
  const [editingLocation, setEditingLocation] = useEditingLocation();
  const [currentLocation, setCurrentLocation] = useState<location | undefined>(undefined);
  let defaultRegion = {
    latitude: 34.050783236893395,
    longitude: -118.83192890478199,
    latitudeDelta: 0.9091139902085246,
    longitudeDelta: 0.5355799588636216,
  };
  const [searchResults, setSearchResults] = useState<location[]>([]);
  const locationChanged = (currentLocation?.coordinates != null) && (
    (editingLocation == null) || (editingLocation.coordinates == null)
    || (editingLocation.coordinates.lat !== currentLocation.coordinates.lat)
    || (editingLocation.coordinates.long !== currentLocation.coordinates.long)
  );
  const form = useAppForm({
    defaultValues: {
      address: '',
    },
  });
  const addressText = useStore(form.store, state => state.values.address);
  useBackHandler(locationChanged);
  useStatusBarColor();

  useEffect(() => {
    console.log('editing location', locationToString(editingLocation));
    setLocation(editingLocation);
  }, [editingLocation]);

  if (currentLocation?.coordinates != null
    && !!currentLocation.coordinates.lat
    && !!currentLocation.coordinates.long) {
    const coordinate = coordinateFromString(`${currentLocation.coordinates.lat}, ${currentLocation.coordinates.long}`);
    defaultRegion = ({
      latitude: coordinate.latitude,
      longitude: coordinate.longitude,
      latitudeDelta: 0.4,
      longitudeDelta: 0.2,
    });
  }

  const backPressed = () => {
    handleBackPressed(locationChanged);
  };

  const onMapLongPress = (event: LongPressEvent) => {
    if (markerRef.current != null) {
      markerRef.current.hideCallout();
    }

    setLocation({
      coordinates: {
        lat: event.nativeEvent.coordinate.latitude.toFixed(6),
        long: event.nativeEvent.coordinate.longitude.toFixed(6),
      },
    });
  };

  const onRegionChange = (region: Region) => {
    console.log(region);
  };

  // Save the location and return.
  const onLocationSelect = () => {
    setEditingLocation(currentLocation);

    if (currentLocation?.coordinates != null) {
      router.back();
    }
  };

  const searchPressed = () => {
    Keyboard.dismiss();
    performAddressSearch();
  };

  const performAddressSearch = async () => {
    if (addressText.length === 0) {
      return;
    }

    // Check if it is already lat, long. If so, do not search.
    // eslint-disable-next-line regexp/no-super-linear-backtracking
    const latlongRegex = /^\s*(-?\d+\.\d+)\s*(?:[,/][,/ ]*| )\s*(-?\d+\.\d+)\s*$/;
    const match = addressText.match(latlongRegex);
    console.log('search', addressText, match);
    if (match) {
      const location = {
        coordinates: {
          lat: match[1].toString(),
          long: match[2].toString(),
        },
      };
      setLocation(location);
      return;
    }

    // Run the search.
    setShowSpinner(true);
    if (markerRef.current != null) {
      markerRef.current.hideCallout();
    }
    const response: geocodeAddressResponse = await geocodeAddress(addressText);
    setShowSpinner(false);

    if (response.status === 'OK') {
      if (response.results.length === 1) {
        console.log(response.results[0]);
        setLocation(response.results[0]);
      }
      else {
        const tmpResults: location[] = [];
        response.results.forEach((location: location) => {
          tmpResults.push(location);
        });

        setSearchResults(tmpResults);
        setShowSearchResults(true);
      }
    }
    else if (response.status === 'ZERO_RESULTS') {
      Alert.alert(
        'No Results',
        'Try searching for a different address',
        [
          {
            text: 'OK',
          },
        ],
      );
    }
  };

  const setLocation = (location?: location) => {
    // TODO: Clean this up:
    // eslint-disable-next-line react-hooks-extra/no-direct-set-state-in-use-effect
    setCurrentLocation(location);
    if (markerRef.current != null) {
      markerRef.current.showCallout();
    }
  };

  const searchResultSelected = (location: location) => {
    setLocation(location);
    setShowSearchResults(false);
  };

  const onSearchResultClose = () => {
    setShowSearchResults(false);
  };

  let currentCoordinate: LatLng | null = null;
  if (currentLocation?.coordinates != null) {
    currentCoordinate = coordinateFromString(`${currentLocation.coordinates.lat}, ${currentLocation.coordinates.long}`);
  }

  return (
    <>
      <KeyboardAvoidingCustomView>
        <SafeAreaView style={styles.container}>
          <Header title="Select Location" backButton onBackPressed={backPressed} />
          <View style={styles.contentContainer}>
            <MapView
              style={styles.map}
              onLongPress={onMapLongPress}
              onRegionChangeComplete={onRegionChange}
              initialRegion={defaultRegion}
              region={defaultRegion}
            >
              {!!currentLocation && !!currentCoordinate
                && (
                  <Marker
                    ref={markerRef}
                    coordinate={currentCoordinate}
                    title={locationToShortString(currentLocation)}
                  />
                )}
            </MapView>
            <View style={[elements.tray, { margin: 20, position: 'absolute', bottom: 0, left: 0, right: 0, padding: 20, paddingTop: 0 }]}>
              <View style={styles.searchBar}>
                <form.AppField
                  name="address"
                  children={field => (
                    <field.FormTextInput
                      placeholder="Search..."
                      returnKey="search"
                      onSubmit={performAddressSearch}
                      autoCorrect={false}
                    />
                  )}
                />
                <TouchableOpacity activeOpacity={0.5} style={[styles.button, { backgroundColor: colors.blue }]} onPress={searchPressed}>
                  <Image source={require('@assets/icons/location_search.png')} style={styles.buttonImage} testID="search-button" />
                </TouchableOpacity>
              </View>
              {!currentCoordinate
                && (
                  <>
                    <Text style={styles.selectInstructionText}>Long press on map to a drop pin</Text>
                    <View style={[styles.selectButton, { backgroundColor: colors.grayText }]}>
                      <Text style={[elements.buttonText]}>Select Location</Text>
                    </View>
                  </>
                )}
              {!!currentCoordinate
                && (
                  <>
                    <Text style={styles.coordinateText}>{`${currentCoordinate.latitude}, ${currentCoordinate.longitude}`}</Text>
                    <TouchableOpacity activeOpacity={0.5} style={styles.selectButton} onPress={onLocationSelect}>
                      <Text style={[elements.buttonText]}>Select Location</Text>
                    </TouchableOpacity>
                  </>
                )}
            </View>
          </View>
        </SafeAreaView>
      </KeyboardAvoidingCustomView>
      {showSpinner
        && <ActivityModal message="Searching For Location..." />}
      {showSearchResults
        && (
          <LocationSelectionModal
            locations={searchResults}
            onSelect={searchResultSelected}
            onClose={onSearchResultClose}
          />
        )}
    </>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    backgroundColor: colors.primaryBg,
  },
  contentContainer: {
    flex: 1,
  },
  map: {
    marginTop: 12,
    width: '100%',
    height: '110%',
  },
  searchBar: {
    flexDirection: 'row',
    alignItems: 'center',
    justifyContent: 'center',
  },
  selectInstructionText: {
    marginTop: 20,
    fontSize: 14,
    fontWeight: '400',
    textAlign: 'center',
    color: colors.grayText,
  },
  coordinateText: {
    marginTop: 20,
    fontSize: 14,
    fontWeight: '400',
    textAlign: 'center',
    color: colors.primaryText,
  },
  selectButton: {
    alignItems: 'center',
    justifyContent: 'center',
    marginTop: 20,
    backgroundColor: colors.yellow,
    borderRadius: 8,
    height: 50,

  },
  button: {
    marginTop: 18,
    marginLeft: 16,
    height: 50,
    width: 50,
    borderRadius: 8,
    alignItems: 'center',
    justifyContent: 'center',
  },
  buttonImage: {
    resizeMode: 'contain',
    height: 36,
    width: 36,
  },
});

export default Page;
