...
  const respondButtonText = (calloutResponseMutationState.length
    ? (`Sending response ${calloutResponseMutationState[0].text}`)
    : (callout && callout.my_response ? `Responded ${callout.my_response}` : 'Respond'));

  const tabs: Array<tabItem> = Array.from({ length: 4 });
  tabs[CalloutTabs.INFO] = {
    title: 'Info',
  };
  tabs[CalloutTabs.LOG] = {
    title: 'Log',
    badge: logBadge,
    badgeColor: colors.red,
  };
  tabs[CalloutTabs.FILES] = {
    title: 'Files',
    badge: fileBadge,
    badgeColor: colors.red,
  };
  tabs[CalloutTabs.PERSONNEL] = {
    title: 'Response',
    badge: personnelBadge,
    badgeColor: colors.green,
  };

  useEffect(() => {
    if (Platform.OS === 'ios') {
...
