...

  return (
    <View style={[styles.container, viewStyle]}>
      {backButton
        && (
          <TouchableOpacity activeOpacity={0.2} style={styles.backContainer} onPress={() => backPressed()}>
            <Image source={require('@assets/icons/back.png')} style={styles.backImage} testID="backButton" />
          </TouchableOpacity>
        )}
      <Text
        style={[styles.title, { paddingHorizontal: backButton ? 10 : 20 }]}
        numberOfLines={1}
        testID="header-title"
...
