...
}

const Page = () => {
    const [topMargin, setTopMargin] = useState(0);
    const [snoozeModalVisible, setSnoozeModalVisible] = useState(false);
    const [snoozeExpireTime, setSnoozeExpireTime] = useState(0);
    const [snoozeTitle, setSnoozeTitle] = useState('Snooze');
    const chatHasUnread = useChatUnread();
    const numberActiveCallouts = useNumberActiveCallouts();

    useEffect(() => {
        if (Platform.OS === 'ios') {
            StatusBar.setBarStyle('dark-content');
...
