...
  { label: 'Sweet - Short', value: 'sweet_1_time', asset: require('assets/sounds/sweet_1_time.mp3') },
  { label: 'Sweet - Long', value: 'sweet_6_times', asset: require('assets/sounds/sweet_6_times.mp3') },
  { label: 'Trumpets - Short', value: 'trumpets_1_time', asset: require('assets/sounds/trumpets_1_time.mp3') },
  { label: 'Trumpets - Long', value: 'trumpets_4_times', asset: require('assets/sounds/trumpets_4_times.mp3') },
  { label: 'Wooden drum', value: 'wooden_drum', asset: require('assets/sounds/wooden_drum.mp3') },
  { label: 'Yucatan - Short', value: 'yucatan_1_time', asset: require('assets/sounds/yucatan_1_time.mp3') },
  { label: 'Yucatan - Long', value: 'yucatan_6_times', asset: require('assets/sounds/yucatan_6_times.mp3') },
  /* eslint-enable ts/no-require-imports */
];

export const availableSounds = [
  { label: 'No notification', value: NO_NOTIFICATION },
  { label: 'Silent', value: SILENT },
...
