appId: org.malibusar.app
TEST_VALIDATION: true
---
- tapOn:
    id: Callouts
- tapOn: Create Callout

- runFlow:
    when:
      true: ${TEST_VALIDATION}
    commands:
      - scrollUntilVisible:
          centerElement: true
          element:
            text: 'Handling Unit / Tag #'
      - tapOn:
          text: Create Callout
          index: 1
      - assertVisible: .*Title is a required field.*
      - tapOn: OK
      - scrollUntilVisible:
          direction: UP
          element:
            text: Select type
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: Select type
      - assertVisible: Search
      - tapOn: Rescue
- tapOn: Title - Few Word Summary
- inputText: '${TITLE}'
- tapOn: Call Details - Full Description
- inputText: Details of the callout.
- tapOn:
    text: Circumstances / Call Details
    label: Click on 'Circumstances / Call Details' to hide keyboard.

- tapOn:
    id: Location-button
- tapOn: Search...
- inputText: Malibu Creek State Park
- tapOn:
    id: search-button
- assertVisible: '34.0979551, -118.7314142'
- tapOn:
    text: Select Location
    index: 1
- assertVisible: '1925 Las Virgenes Road, Calabasas, CA 91302'
- tapOn: Location Description
- inputText: Description of the specific location.

- pressKey: Enter
- scrollUntilVisible:
    element:
      text: Subject Contact

- tapOn: Subject
- inputText: John Doe
- pressKey: Enter
- tapOn: Subject Contact
- inputText: 555-555-5555
- pressKey: Enter

- scrollUntilVisible:
    centerElement: true
    element:
      text: Informant
- tapOn: Informant
- inputText: Jane Doe
- pressKey: Enter
- tapOn: Informant Contact
- inputText: 555-555-1234
- pressKey: Enter
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          id: Tactical Talkgroup
      - tapOn: MAL SAR
      - tapOn: Select Frequencies
      - tapOn: C41
      - tapOn: C42
      - tapOn:
          id: 'android:id/content'
      - tapOn: Select Notifications
      - tapOn: SP
      - tapOn:
          id: 'android:id/content'
- scrollUntilVisible:
    centerElement: true
    element:
      text: 'Handling Unit / Tag #'
      index: 1
- tapOn:
    text: 'Handling Unit / Tag #'
    index: 1
- inputText: tag 100
- tapOn:
    text: 'Handling Unit / Tag #'
    index: 0
    label: Click on 'Handling Unit / Tag # ' label to hide keyboard.
- tapOn: Create Callout
