appId: org.malibusar.app
---
- tapOn: Respond
- assertVisible: 10-19
- assertVisible: 10-8
- assertVisible: 10-7
- tapOn: 10-8
- assertVisible: Responded 10-8
- tapOn: Response
- assertVisible: 10-8
- assertNotVisible: 10-7
- assertNotVisible: 10-19

- tapOn: Info
- tapOn: Responded 10-8
- tapOn: 10-7
- assertVisible: Responded 10-7
- tapOn: Response
- assertVisible: 10-7
- assertNotVisible: 10-8
- assertNotVisible: 10-19

- tapOn: Info
- tapOn: Responded 10-7
- tapOn: 10-19
- assertVisible: Responded 10-19
- assertVisible: Response
- tapOn: Response
- assertVisible: 10-19
- assertNotVisible: 10-8
- assertNotVisible: 10-7
