appId: org.malibusar.app
---
- launchApp
- tapOn:
    text: Settings
- assertVisible: Username
- runFlow:
    when:
      visible:
        id: Notifications-checked
    commands:
      - tapOn:
          id: Notifications-checked
- tapOn:
    id: Notifications-checkbox
    retryTapIfNoChange: false
- tapOn:
    id: expand-notifications
- assertVisible: Restore default notification sounds
- tapOn: Restore default notification sounds
- assertVisible:
    text: Snooze
- tapOn:
    text: Settings
- tapOn:
    id: expand-notifications
- assertVisible: Yucatan - Long
- tapOn:
    id: backButton
